--- a/app.css
+++ b/app.css
@@ -2,6 +2,9 @@ body {
   margin: 0;
   padding: 0;
   background-color: #e6e6e6;
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
